# ibkr_core_mcp

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/workflows/: apisec-scan.yml  ci.yml
docs/: 2026-05-22-ibkr-core-mcp-design.md  2026-06-30-quote-access-matrix.md  api-reference.md  future-doc-scraper.md  live-test-log.md  security-audit-2026-05-25.md  security-audit-2026-05-26.md  security-audit-2026-05-27.md  security-audit-2026-06-10.md  security-audit-2026-06-23.md  test-coverage.md  tools-reference.md  windows-setup.md
docs/plans/: 2026-06-27-architecture-notes.md  2026-06-27-publication-readiness.md  2026-06-27-v2-architecture-plan.md
docs/superpowers/plans/: 2026-05-23-ibkr-core-mcp-phase1.md  2026-05-23-ibkr-core-mcp-phase2.md  2026-05-24-human-auth-order-security.md  2026-05-26-ibkr-core-mcp-phase3.md  2026-06-26-firecrawl-web-scraper.md
docs/superpowers/specs/: 2026-05-24-human-auth-order-security.md  2026-06-26-firecrawl-web-scraper-design.md
ibkr_core_mcp/: __init__.py  _order_dialog.py  analytics.py  auth.py  backtest.py  cache.py  claude_tools.py  client.py  config.py  exceptions.py  flex_query.py  human_auth.py  indicators.py  mcp_server.py  models.py  order_confirm.py  pinescript.py  rate_limiter.py  scrape_fallback.py  store.py  streaming.py  web_scraper.py
ibkr_core_mcp/gateway/: Dockerfile  __init__.py  conf.yaml  healthcheck.sh  manager.py  run_gateway.sh  tickler.sh
tests/: conftest.py  test_alerts_live.py  test_analytics.py  test_auth.py  test_backtest.py  test_cache.py  test_claude_tools.py  test_client.py  test_client_live.py  test_config.py  test_exceptions.py  test_flex_query.py  test_gateway.py  test_human_auth.py  test_indicators.py  test_mcp_server.py  test_models.py  test_order_confirm.py  test_pinescript.py  test_rate_limiter.py  test_scrape_fallback.py  test_store.py  test_streaming.py  test_web_scraper.py
